# ttv21sp_game_ai-kurssi

./: CMakeLists.txt  README.md
include/: agents.h  find_goal_in_grid.h
include/view/: sfml_application.h
notebooks/: 1_blind_search.cpp  2_grid_search.cpp  Sudoku_Solver.cpp  paths.cpp
submissions/: exer_astar.cpp  game_theory.md  main_exercise_astar.cpp  main_exercise_fsm.cpp  practical_work.cpp
